--- a/loginForm/.settings/org.eclipse.wst.common.component
+++ b/loginForm/.settings/org.eclipse.wst.common.component
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
+                        
     
     
-    <wb-module deploy-name="sp5-chap09-0.0.1-SNAPSHOT">
-                                
+    
+    
+    <wb-module deploy-name="loginPage-0.0.1-SNAPSHOT">
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
-                                
+                                                
+        
+        
         
         
         <property name="java-output-path" value="/sp5-chap09/target/classes"/>
-                
         <property name="context-root" value="loginForm"/>
-                            
+                                            
+    
+    
     
     
     </wb-module>
-            
+                    
+
+
 
 
 </project-modules>
